MdExplorer/wwwroot/MdCustomCSS.css
/*impostazione generica*/
body {
    user-select: none;
}

/*change color to folders in treeview*/


.gold-icon {
    color: gold;
}

    /* Note: If you're using an SVG icon, you should make the class target the `<svg>` element */
    .gold-icon svg {
        fill: gold;
    }


/* little stupid changes for tocbot*/
li .toc-list-item {
    border-bottom: dashed !important;
    border-color: green !important;
    border-width: 1px !important;
}

/* scroll down more then the ends of <div>*/
.md-tocbot-content {
    margin-bottom: 95vh !important;
}



div .warning p em {
    background-color: palegoldenrod
}

/*li.sortableClass {
    cursor: pointer;
}*/

/*Manage movable objets*/
.movable {
    position: absolute;
    border: 1px solid black;
}

.movedAndFixed {
    position: absolute;
    background: none;
}


/*This part is to manage resizable images*/

img.overrideImgFluid {
    max-width: none !important;
    width: 100%;
    height: 100%;
}

/*qui è filter problema per la gestione dello spreadsheet*/
.resizableImg {
    border: 1px solid black;
    display: inline-block;
    background: white;
    resize: both;
    overflow: hidden !important;
    line-height: 0;
}
/*----------------------*/

.resizable img {
    width: 100%;
    height: 100%;
}

.defaultImg {
    width: 300px;
    height: 200px;
}

.s1 {
    height: auto;
    border: 1px dotted blue;
    cursor: move;
    margin: 5px 0 5px 0;
}

.s2 {
    height: auto;
    border: 1px dotted red;
    margin: 5px 0 5px 0;
}

.row [class*='col-'] {
    transition: all 0.5s ease-in-out;
}

.img-wrapper {
    position: relative;
    width: auto;
}

.img-responsive {
    width: auto;
    height: auto;
}

.img-overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
}

    .img-overlay:before {
        content: ' ';
        display: block;
        /* adjust 'height' to position overlay content vertically */
        height: 05%;
    }
/* resize  margin of container bootstrap */
.container {
    margin: 0px;
}

/* set canvas on top of html elements*/
.canvasForWriting {
    z-index: 100;
}

/*tippy colors*/
.tippy-tooltip.processok-theme {
    background-color: blue;
    color: white;
    border: solid;
    border-width: 1px;
    border-color: white;
}


.tippy-tooltip.processWIP-theme {
    background-color: yellow;
    color: black;
    border: solid;
    border-width: 1px;
    border-color: black;
}

.tippy-tooltip.processCompletato-theme {
    background-color: green;
    color: white;
    border: solid;
    border-width: 1px;
    border-color: white;
}

.tippy-tooltip.processInfo-theme {
    background-color: white;
    color: black;
    border: solid;
    border-width: 1px;
    border-color: black;
}

.tippy-tooltip.processAttenzione-theme {
    background-color: gold;
    color: black;
    border: solid;
    border-width: 1px;
    border-color: black;
}

/*priority*/
.tippy-tooltip.priorityUrgente-theme {
    background-color: white;
    color: red;
    border: solid;
    border-width: 1px;
    border-color: red;
}

.tippy-tooltip.priorityAnnullato-theme {
    background-color: black;
    color: red;
    font-weight: bold;
    border: solid;
    border-width: 1px;
    border-color: red;
}

.tippy-tooltip.priorityFermata-theme {
    background-color: red;
    color: white;
    border: solid;
    border-width: 1px;
    border-color: black;
}

.tippy-tooltip.priorityDaCapireUrgentemente-theme {
    background-color: white;
    color: red;
    border: solid;
    border-width: 1px;
    border-color: red;
}


.tippy-tooltip.priorityConclusa-theme {
    background-color: greenyellow;
    color: black;
    border: solid;
    border-width: 1px;
    border-color: black;
}

.tippy-tooltip.priorityDaValutare-theme {
    background-color: grey;
    color: white;
    border: solid;
    border-width: 1px;
    border-color: grey;
}

.tippy-tooltip.priorityObbligatorio-theme {
    background-color: grey;
    color: white;
    border: solid;
    border-width: 1px;
    border-color: grey;
}



/*EditH1*/
.edith1-popup-overlay {
    /*Hides pop-up when there is no "active" class*/
    z-index: 100;
    display: none;
    visibility: hidden;
    position: fixed;
    left: 30px;
    background: #ffffff;
    width: 100%;
}

.showAreaH1 {
    border: 2px solid blue;
    cursor: pointer;
}

.edith1-popup-overlay.active {
    /*displays pop-up when "active" class is present*/
    display: inline;
    visibility: visible;
    height: calc(100% - 70px);
    /*text-align: center;*/
}

.edith1textarea {
    width: calc(100% - 70px);
    height: calc(100% - 70px);
    border: none !important;
    outline: none !important;
}

.popup-content {
    /*Hides pop-up content when there is no "active" class */
    visibility: hidden;
    display: none;
}

    .popup-content.active {
        /*Shows pop-up content when "active" class is present */
        visibility: visible;
        display: inline;
    }

button {
    display: inline-block;
    vertical-align: middle;
    border-radius: 30px;
    margin: .20rem;
    font-size: 1rem;
    color: #666666;
    background: #ffffff;
    border: 1px solid #666666;
}

    button:hover {
        border: 1px solid #666666;
        background: #666666;
        color: #ffffff;
    }

.hideIcons {
    visibility: hidden;
}



.red {
    background-color: palevioletred;
    color: white;
}

.blue {
    background-color: deepskyblue;
}

.green {
    background-color: greenyellow;
}

s
.yellow {
    background-color: yellow;
}

.gold {
    background-color: gold;
}

.darkgreen {
    background-color: limegreen
}

/*main page MDE*/

.mdeContainerIFrameApplciation {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: stretch;
    width:100%;    
}

.mdeItemMainPageLeftMenu {    
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    flex: 0 0 45px;
    
}

.mdeItemMainPageCenter {
    flex: 1;
}

mdeItemRightTabs {
    flex: 0 0 0px;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    
}

.buttonTab {
    left:calc(100vw - 47px);
    transform: rotate(90deg);
    position: relative;
    border-color: grey;
    border-style: solid;
    top: 20px;
    cursor: pointer;
    font: bold;
    padding: 0px 8px;
    border-width: 5 0 0 0;
    user-select: none;
    height:10px;
    width:50px;
}

    .buttonTab:hover {                
        font: bold;
        border-color: #1823d3;
        border-style: solid;
        border-width: 5 0 0 0;
        padding:0px 8px;
    }

.tocNavigation {    
    position: absolute;
    left: calc(100% - 300px);
    width: 270px;
    display:flex;
    flex-direction:row;
}

.tocNavNavigation {
    max-height: 100vh;    
    overflow-y: auto;
    width:-webkit-fill-available;
}
.tocSeparator {
    width: 5px;
    background-color: grey;    
    max-height: 100vh;
}
.tocSeparator:hover {
    cursor:e-resize
}


.mdeTocSticky-top {    
    direction: ltr;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 1020;
}

.mdeTabSticky-top {    
    direction: ltr;
    position: -webkit-sticky;
    position: sticky;
    width:30px;
    top: 0;    
}

.mdeLowerBar {
    display: flex;
    flex-direction: row;
    justify-content: center;
    position: fixed;
    top: calc(100vh - 60px);
    left: calc(50vw - 60px);
    width: 120px;
    border: solid;
    border-width:2px;
    border-color: red;
    border-radius: 20px;
    float:none;
    background-color: white;
    z-index: 1020;
}

